--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -15,7 +15,7 @@
       <a href="https://github.com/concord-consortium/cloud-file-manager">Cloud File Manager Library</a>
     </h1>
     <p>
-      Commit <a href="https://github.com/concord-consortium/cloud-file-manager/commit/__COMMIT__">__COMMIT__</a> deployed on __DATE__.
+      Version __VERSION__ using commit <a href="https://github.com/concord-consortium/cloud-file-manager/commit/__COMMIT__">__COMMIT__</a> deployed on __DATE__.
     </p>
   </body>
 </html>
